--- a/style.css
+++ b/style.css
@@ -33,10 +33,7 @@ header {
   top:30px;
   left:30px;
   width:50px;
-  height:50px;
-  background-image:url(img/mickeies.png);
-  background-size:350px 350px;
-  background-position:0 0;
+  height:auto;
 }
 .winContainer {
   display: none;
