--- a/style.css
+++ b/style.css
@@ -215,6 +215,9 @@ header {
   height: 80px;
   background: #ccc;
   border: solid 7px #E3E3E3;
+  background-image: url(img/qr.png);
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 .ticketCharacter {
   position: absolute;
